doc: add more detailed directory instructions

--- a/Bitcoin Tweet Sentiment.ipynb
+++ b/Bitcoin Tweet Sentiment.ipynb
@@ -58,7 +58,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download pickle file here: https://drive.google.com/file/d/1e3Bq9VzDsS_NGxyiY1QyEGXSnccuHFhJ/view?usp=sharing"
+    "Download pickle file here: https://drive.google.com/file/d/1e3Bq9VzDsS_NGxyiY1QyEGXSnccuHFhJ/view?usp=sharing\n",
+    "\n",
+    "Put this in the project dir"
    ]
   },
   {
@@ -122,7 +124,9 @@
    "source": [
     "Download cycle file here: https://drive.google.com/open?id=1yqIXOYTXpS5fSyzQlyYxnN6djp27EzGa\n",
     "\n",
-    "Download encoder file here: https://drive.google.com/open?id=16l7RR8zVJp7tukFOAH778rdi4ntO9_7i"
+    "Download encoder file here: https://drive.google.com/open?id=16l7RR8zVJp7tukFOAH778rdi4ntO9_7i\n",
+    "\n",
+    "put these two files inside `models` dir"
    ]
   },
   {
